dons_tests/valid_kxi/assign_type_check.kxi
void main(){
    int x;
    char y;
    string z;
    bool b;
    x = 1;
    y = 'c';
    z = "string";
    b = true;
}
