dons_tests/invalid_kxi/bad_binary_type_check.kxi
void main(){
    char x = 'c';
    int y = x + 2;
    int z = y - x * 3;
}
